fixing the redirect to front page

--- a/Burger Builder/src/components/Order/CheckoutSummary/CheckoutSummary.css
+++ b/Burger Builder/src/components/Order/CheckoutSummary/CheckoutSummary.css
@@ -4,8 +4,9 @@
     margin: auto;
 }
 
+/* because of this media querry the burger is not always centered
 @media (min-width: 600px) {
     .CheckoutSummary {
         width: 500px;
     }
-}
+} */
