--- a/Animations Demo/src/components/Modal/Modal.css
+++ b/Animations Demo/src/components/Modal/Modal.css
@@ -11,3 +11,11 @@
     left: 25%;
     width: 50%;
 }
+
+.ModalOpen {
+    animation: openModal 0.4s ease-out forwards;
+}
+
+.ModalClosed {
+    animation: closeModal 1s ease-out forwards;
+}
