--- a/Animations Demo/src/components/Modal/Modal.css
+++ b/Animations Demo/src/components/Modal/Modal.css
@@ -10,12 +10,19 @@
     top: 30%;
     left: 25%;
     width: 50%;
+    transition: all 0.3s ease-out;
 }
 
 .ModalOpen {
     animation: openModal 0.4s ease-out forwards;
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .ModalClosed {
     animation: closeModal 1s ease-out forwards;
+    display: none;
+    opacity: 0;
+    transform: translateY(-100);
 }
