--- a/Animations Demo/src/components/Modal/Modal.css
+++ b/Animations Demo/src/components/Modal/Modal.css
@@ -14,15 +14,15 @@
 }
 
 .ModalOpen {
-    animation: openModal 0.4s ease-out forwards;
-    display: block;
+    /* animation: openModal 0.4s ease-out forwards; */
+    /* display: block; */
     opacity: 1;
     transform: translateY(0);
 }
 
 .ModalClosed {
-    animation: closeModal 1s ease-out forwards;
-    display: none;
+    /* animation: closeModal 1s ease-out forwards; */
+    /* display: none; */
     opacity: 0;
     transform: translateY(-100);
 }
