--- a/Animations Demo/src/components/Modal/Modal.css
+++ b/Animations Demo/src/components/Modal/Modal.css
@@ -14,15 +14,46 @@
 }
 
 .ModalOpen {
-    /* animation: openModal 0.4s ease-out forwards; */
-    /* display: block; */
+    /* to keep the final step 100% we use forwards */
+    animation: openModal 0.4s ease-out forwards;
+    /* display: block;
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0); */
 }
 
 .ModalClosed {
-    /* animation: closeModal 1s ease-out forwards; */
-    /* display: none; */
+    animation: closeModal 1s ease-out forwards;
+    /* display: none;
     opacity: 0;
-    transform: translateY(-100);
+    transform: translateY(-100); */
+}
+
+@keyframes openModal {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(90%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes closeModal {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    50% {
+        opacity: 0.8;
+        transform: translateY(60%);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
 }
